added the grunt and sass setup

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Boardash</title>
     </head>
     <body>
-        <header>
-
+        <header class="page__header">
+            <div class="header__logo"></div>
          </header>
         <nav>
 
