top main wireframe

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="index.css" type="text/css" >
         <title>Boardash</title>
     </head>
     <body>
@@ -11,7 +12,12 @@
 
         </nav>
         <main>
-
+            <h2>Meetings</h2>
+            <div class="top__main">
+                <div class="top__flexbox"></div>
+                <div class="top__flexbox"></div>
+                <div class="top__flexbox"></div>
+            </div>
         </main>
         <aside>
 
