--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css" type="text/css" >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Boardash</title>
     </head>
     <body>
@@ -14,9 +16,21 @@
         <main>
             <h2>Meetings</h2>
             <div class="top__main">
-                <div class="top__flexbox"></div>
-                <div class="top__flexbox"></div>
-                <div class="top__flexbox"></div>
+                <div class="top__flexbox">
+                    <div class="flexbox__icon">
+                        <i class="fa fa-users"></i>
+                    </div>
+                </div>
+                <div class="top__flexbox">
+                    <div class="flexbox__icon">
+                        <i class="fa fa-calendar"></i>
+                    </div>
+                </div>
+                <div class="top__flexbox">
+                    <div class="flexbox__icon">
+                        <i class="fa fa-calendar-times-o"></i>
+                    </div>
+                </div>
             </div>
         </main>
         <aside>
