top main versie 1.0

--- a/index.html
+++ b/index.html
@@ -20,16 +20,22 @@
                     <div class="flexbox__icon">
                         <i class="fa fa-users"></i>
                     </div>
+                    <h5 class="flexbox__titles">Number of meetings</h5>
+                    <p class="flexbox__paragraph"><span class="highlighted">36</span> This month</p>
                 </div>
                 <div class="top__flexbox">
                     <div class="flexbox__icon">
                         <i class="fa fa-calendar"></i>
                     </div>
+                    <h5 class="flexbox__titles">Rescheduled meetings</h5>
+                    <p class="flexbox__paragraph"><span class="highlighted">14</span> This month</p>
                 </div>
                 <div class="top__flexbox">
                     <div class="flexbox__icon">
                         <i class="fa fa-calendar-times-o"></i>
                     </div>
+                    <h5 class="flexbox__titles">Cancelled meetings</h5>
+                    <p class="flexbox__paragraph"><span class="highlighted">20</span> This month</p>
                 </div>
             </div>
         </main>
