--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
     <head>
         <title>Boardash</title>
+        <link rel="stylesheet" type="text/css" href="css/index.css">
     </head>
-    <body>
+    <body class="page__body">
         <header class="page__header">
-            <div class="header__logo"></div>
+            <div class="page__logo">
+                <h2 class="header__logo">Boardash</h2>
+            </div>
+            <div class="header__search">
+                <button class="search__button" type="button"><img class="search__img" src="img/search.svg"></button>
+                <input class="header__search-bar" type="text" placeholder="Search">
+                <button class="search__filter" type="button">Catagory</button>
+            </div>
          </header>
         <nav>
 
