--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <input class="header__search-bar" type="text" placeholder="Search">
                 <button class="search__filter" type="button">Catagory</button>
             </div>
+                <img src="img/profile-picture.png" class="header__profile-icon">
+                <p class="header__profile-name">Essie Howell</p>
+                <img class="header__add" src="img/plus.svg" alt="">
          </header>
         <nav>
 
