top main versie 2

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
             <div class="top__main">
                 <div class="top__flexbox">
                     <div class="flexbox__icon">
-                        <i class="fa fa-users"></i>
+                        <img class="flexbox__img" src="images/meetings.png">
                     </div>
                     <h5 class="flexbox__titles">Number of meetings</h5>
                     <p class="flexbox__paragraph"><span class="highlighted">36</span> &nbsp&nbspThis month</p>
                 </div>
                 <div class="top__flexbox">
                     <div class="flexbox__icon">
-                        <i class="fa fa-calendar"></i>
+                        <img class="flexbox__img" src="images/calender.png">
                     </div>
                     <h5 class="flexbox__titles">Rescheduled meetings</h5>
                     <p class="flexbox__paragraph"><span class="highlighted">14</span> &nbsp&nbspThis month</p>
                 </div>
                 <div class="top__flexbox">
                     <div class="flexbox__icon">
-                        <i class="fa fa-calendar-times-o"></i>
+                        <img class="flexbox__img" src="images/ccalender.png">
                     </div>
                     <h5 class="flexbox__titles">Cancelled meetings</h5>
                     <p class="flexbox__paragraph"><span class="highlighted">20</span> &nbsp&nbspThis month</p>
