changed the fonts, changed the seize and placements of most items and changed the color of the filter button to make them more like the design

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
             <div class="header__search">
                 <button class="search__button" type="button"><img class="search__img" src="img/search.svg"></button>
                 <input class="header__search-bar" type="text" placeholder="Search">
-                <button class="search__filter" type="button">Catagory</button>
+                <div class="header__dropdown">
+                    <span class="dropdown__text">Category</span>
+                    <img class="dropdown__image" src="img/down-arrow.svg" alt="">
+                    <div class="header__dropdown-content">
+                        <p class="dropdown__text">Category</p>
+                    </div>
+                </div>
             </div>
-                <img src="img/profile-picture.png" class="header__profile-icon">
-                <p class="header__profile-name">Essie Howell</p>
-                <img class="header__add" src="img/plus.svg" alt="">
+                <div class="header__profile">
+                    <img src="img/profile-picture.png" class="header__profile-icon">
+                    <p class="header__profile-name">Essie Howell</p>
+                    <img class="header__add" src="img/plus.svg" alt="">
+                </div>
          </header>
         <nav>
 
