this is the frame of the notification bar.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Boardash</title>
+        <link rel="stylesheet" href="Index.css" type="text/css">
     </head>
     <body>
         <header>
@@ -14,6 +15,46 @@
 
         </main>
         <aside>
+            <section class="notification_bar">
+                <div class="message">
+                    <p class="notification_time">9:45</p>
+                    <p class="notification_text">Catchup with simon</p>
+                </div>
+                <div class="message">
+                    <p class="notification_time">9:59</p>
+                    <span class="message_pf"></span>
+                    <p class="notification_text">Mike added you in the meeting</p>
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="message">
+                    <p class="notification_time">10:30</p>
+                    <p class="notification_text">Sales Presentation with<br> Miguel - Daily catchup</p>
+                </div>
+                <div class="message">
+                    <p class="notification_time">12:45</p>
+                    <p class="notification_text">Team voting for outing</p>
+                    <ul>
+                        <li><label>
+                            <input type="checkbox">
+                        </label>Dinner</li>
+                        <li><label>
+                            <input type="checkbox">
+                        </label>Movie - Spiderman</li>
+                        <li><label>
+                            <input type="checkbox">
+                        </label></li>
+                        <li><label>
+                            <input type="checkbox">
+                        </label></li>
+                    </ul>
+                </div>
+                <div class="notification_buttons"><button class="refresh">Refresh</button><button class="close">close</button></div>
+
+            </section>
+
 
         </aside>
     </body>
