--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Boardash</title>
-        <link rel="stylesheet" href="Index.css" type="text/css">
+        <link rel="stylesheet" href="css/Index.css" type="text/css">
     </head>
     <body>
         <header>
