changed name in navigation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img class="grid-admin--png" src="img/Hadie-profile-pic-circle-1.png">
                     </div>
                     <div class="grid-admin--text">
-                        <p class="grid-admin--welcome">Welcome Calvin</p>
+                        <p class="grid-admin--welcome">Welcome Essie</p>
                         <p class="grid-admin--rank">Admin Head</p>
                     </div>
                 </div>
