Update to HTML and CSS of messages, still needs work regarding the layout of the flex- and gridsystem.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Boardash</title>
-    </head>
-    <body>
-        <header>
-
-         </header>
-        <nav>
-
-        </nav>
-        <main>
-
-        </main>
-        <aside>
-
-        </aside>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+</head>
+<body>
+    <!-- Flex messages container -->
+    <div class="messages__grid-container">
+        <h3 class="messages__title">Today - 8 meeting</h3>
+        <!-- Flex grid -->
+            <div class="messages__grid">
+                <div class="messages__header">
+                    <img class="messages__profile">
+                    <p class="messages__name">Design catchup</p>
+                    <p class="messages__email">adellac@josianne.com</p>
+                    <p class="messages__time">10 : 30 AM</p>
+                </div>
+                    <div class="messages__body">
+                        <div class="messages__status">
+                            <p class="messages__going">9 Members Going</p>
+                            <p class="messages__pending">2 Pending</p>
+                        </div>
+                            <div class="messages__images">
+                                <img class="messages__members-going">
+                                <img class="messages__members-going">
+                                <p class="message__details">+5 more</p>
+                            </div>
+                        </div>
+                            <div class="messages__footer">
+                                <a href="#">View Details</a></p>
+                            </div>
+            </div>
+    </div>
+</body>
 </html>
