Changed resolution and added grid system.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <h3 class="message__title">Today - 8 meeting</h3>
     <!-- Flex messages container -->
-    <div class="message__container">
-        <h3 class="message__title">Today - 8 meeting</h3>
+        <div class="message__container">
         <!-- Flex grid -->
             <div class="message">
                 <div class="message__header">
@@ -36,6 +36,199 @@
                     <div class="message__footer">
                         <a href="#">View Details</a></p>
                     </div>
+            </div>
+
+        <div class="message">
+            <div class="message__header">
+                <div class="message__picture">
+                    <img class="message__profile" src="test__image.png">
+                </div>
+                <div class="message__description">
+                    <p class="message__name">Design catchup</p>
+                    <p class="message__email">adellac@josianne.com</p>
+                    <p class="message__time">10 : 30 AM</p>
+                </div>
+            </div>
+            <div class="message__body">
+                <div class="message__status">
+                    <p class="message__going">9 Members Going</p>
+                    <p class="message__pending">2 Pending</p>
+                </div>
+                <div class="message__images">
+                    <img class="message__members-going" src="test__image.png">
+                    <img class="message__members-going" src="test__image.png">
+                    <p class="message__details">+5 more</p>
+                </div>
+            </div>
+            <div class="message__footer">
+                <a href="#">View Details</a></p>
+            </div>
+        </div>
+
+
+        <div class="message">
+            <div class="message__header">
+                <div class="message__picture">
+                    <img class="message__profile" src="test__image.png">
+                </div>
+                <div class="message__description">
+                    <p class="message__name">Design catchup</p>
+                    <p class="message__email">adellac@josianne.com</p>
+                    <p class="message__time">10 : 30 AM</p>
+                </div>
+            </div>
+            <div class="message__body">
+                <div class="message__status">
+                    <p class="message__going">9 Members Going</p>
+                    <p class="message__pending">2 Pending</p>
+                </div>
+                <div class="message__images">
+                    <img class="message__members-going" src="test__image.png">
+                    <img class="message__members-going" src="test__image.png">
+                    <p class="message__details">+5 more</p>
+                </div>
+            </div>
+            <div class="message__footer">
+                <a href="#">View Details</a></p>
+            </div>
+        </div>
+
+
+        <div class="message">
+            <div class="message__header">
+                <div class="message__picture">
+                    <img class="message__profile" src="test__image.png">
+                </div>
+                <div class="message__description">
+                    <p class="message__name">Design catchup</p>
+                    <p class="message__email">adellac@josianne.com</p>
+                    <p class="message__time">10 : 30 AM</p>
+                </div>
+            </div>
+            <div class="message__body">
+                <div class="message__status">
+                    <p class="message__going">9 Members Going</p>
+                    <p class="message__pending">2 Pending</p>
+                </div>
+                <div class="message__images">
+                    <img class="message__members-going" src="test__image.png">
+                    <img class="message__members-going" src="test__image.png">
+                    <p class="message__details">+5 more</p>
+                </div>
+            </div>
+            <div class="message__footer">
+                <a href="#">View Details</a></p>
+            </div>
+        </div>
+
+            <div class="message">
+                <div class="message__header">
+                    <div class="message__picture">
+                        <img class="message__profile" src="test__image.png">
+                    </div>
+                    <div class="message__description">
+                        <p class="message__name">Design catchup</p>
+                        <p class="message__email">adellac@josianne.com</p>
+                        <p class="message__time">10 : 30 AM</p>
+                    </div>
+                </div>
+                <div class="message__body">
+                    <div class="message__status">
+                        <p class="message__going">9 Members Going</p>
+                        <p class="message__pending">2 Pending</p>
+                    </div>
+                    <div class="message__images">
+                        <img class="message__members-going" src="test__image.png">
+                        <img class="message__members-going" src="test__image.png">
+                        <p class="message__details">+5 more</p>
+                    </div>
+                </div>
+                <div class="message__footer">
+                    <a href="#">View Details</a></p>
+                </div>
+            </div>
+
+            <div class="message">
+                <div class="message__header">
+                    <div class="message__picture">
+                        <img class="message__profile" src="test__image.png">
+                    </div>
+                    <div class="message__description">
+                        <p class="message__name">Design catchup</p>
+                        <p class="message__email">adellac@josianne.com</p>
+                        <p class="message__time">10 : 30 AM</p>
+                    </div>
+                </div>
+                <div class="message__body">
+                    <div class="message__status">
+                        <p class="message__going">9 Members Going</p>
+                        <p class="message__pending">2 Pending</p>
+                    </div>
+                    <div class="message__images">
+                        <img class="message__members-going" src="test__image.png">
+                        <img class="message__members-going" src="test__image.png">
+                        <p class="message__details">+5 more</p>
+                    </div>
+                </div>
+                <div class="message__footer">
+                    <a href="#">View Details</a></p>
+                </div>
+            </div>
+
+
+            <div class="message">
+                <div class="message__header">
+                    <div class="message__picture">
+                        <img class="message__profile" src="test__image.png">
+                    </div>
+                    <div class="message__description">
+                        <p class="message__name">Design catchup</p>
+                        <p class="message__email">adellac@josianne.com</p>
+                        <p class="message__time">10 : 30 AM</p>
+                    </div>
+                </div>
+                <div class="message__body">
+                    <div class="message__status">
+                        <p class="message__going">9 Members Going</p>
+                        <p class="message__pending">2 Pending</p>
+                    </div>
+                    <div class="message__images">
+                        <img class="message__members-going" src="test__image.png">
+                        <img class="message__members-going" src="test__image.png">
+                        <p class="message__details">+5 more</p>
+                    </div>
+                </div>
+                <div class="message__footer">
+                    <a href="#">View Details</a></p>
+                </div>
+            </div>
+
+
+            <div class="message">
+                <div class="message__header">
+                    <div class="message__picture">
+                        <img class="message__profile" src="test__image.png">
+                    </div>
+                    <div class="message__description">
+                        <p class="message__name">Design catchup</p>
+                        <p class="message__email">adellac@josianne.com</p>
+                        <p class="message__time">10 : 30 AM</p>
+                    </div>
+                </div>
+                <div class="message__body">
+                    <div class="message__status">
+                        <p class="message__going">9 Members Going</p>
+                        <p class="message__pending">2 Pending</p>
+                    </div>
+                    <div class="message__images">
+                        <img class="message__members-going" src="test__image.png">
+                        <img class="message__members-going" src="test__image.png">
+                        <p class="message__details">+5 more</p>
+                    </div>
+                </div>
+                <div class="message__footer">
+                    <a href="#">View Details</a></p>
+                </div>
             </div>
     </div>
 </body>
