--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="message">
                 <div class="message__header">
                     <div class="message__picture">
-                        <img class="message__profile" src="test__image.png">
+                        <img class="message__profile" src="img/test__image.png">
                     </div>
                         <div class="message__description">
                             <p class="message__name">Design catchup</p>
@@ -28,8 +28,10 @@
                                 <p class="message__pending">2 Pending</p>
                             </div>
                                 <div class="message__images">
-                                    <img class="message__members-going" src="test__image.png">
-                                    <img class="message__members-going" src="test__image.png">
+                                    <img class="message__members-going" src="img/test__image.png">
+                                    <img class="message__members-going" src="img/test__image.png">
+                                    <img class="message__members-going" src="img/test__image.png">
+                                    <img class="message__members-going" src="img/test__image.png">
                                     <p class="message__details">+5 more</p>
                                 </div>
                         </div>
@@ -41,22 +43,24 @@
         <div class="message">
             <div class="message__header">
                 <div class="message__picture">
-                    <img class="message__profile" src="test__image.png">
+                    <img class="message__profile" src="img/man1.jpg">
                 </div>
                 <div class="message__description">
-                    <p class="message__name">Design catchup</p>
-                    <p class="message__email">adellac@josianne.com</p>
-                    <p class="message__time">10 : 30 AM</p>
+                    <p class="message__name">Solar Presentation</p>
+                    <p class="message__email">adams_ka@gmail.com</p>
+                    <p class="message__time">11 : 30 AM</p>
                 </div>
             </div>
             <div class="message__body">
                 <div class="message__status">
                     <p class="message__going">9 Members Going</p>
-                    <p class="message__pending">2 Pending</p>
+                    <p class="message__pending">3 Not joining</p>
                 </div>
                 <div class="message__images">
-                    <img class="message__members-going" src="test__image.png">
-                    <img class="message__members-going" src="test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
                     <p class="message__details">+5 more</p>
                 </div>
             </div>
@@ -69,23 +73,25 @@
         <div class="message">
             <div class="message__header">
                 <div class="message__picture">
-                    <img class="message__profile" src="test__image.png">
+                    <img class="message__profile" src="img/man2.jpg">
                 </div>
                 <div class="message__description">
-                    <p class="message__name">Design catchup</p>
-                    <p class="message__email">adellac@josianne.com</p>
-                    <p class="message__time">10 : 30 AM</p>
+                    <p class="message__name">Daily Meeting</p>
+                    <p class="message__email">johnson.eva@santos.ca</p>
+                    <p class="message__time">12 : 00 AM</p>
                 </div>
             </div>
             <div class="message__body">
                 <div class="message__status">
-                    <p class="message__going">9 Members Going</p>
-                    <p class="message__pending">2 Pending</p>
+                    <p class="message__going">5 Members Going</p>
+                    <p class="message__pending">5 Pending</p>
                 </div>
                 <div class="message__images">
-                    <img class="message__members-going" src="test__image.png">
-                    <img class="message__members-going" src="test__image.png">
-                    <p class="message__details">+5 more</p>
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <p class="message__details">+6 more</p>
                 </div>
             </div>
             <div class="message__footer">
@@ -97,22 +103,24 @@
         <div class="message">
             <div class="message__header">
                 <div class="message__picture">
-                    <img class="message__profile" src="test__image.png">
+                    <img class="message__profile" src="img/man3.jpg">
                 </div>
                 <div class="message__description">
-                    <p class="message__name">Design catchup</p>
-                    <p class="message__email">adellac@josianne.com</p>
-                    <p class="message__time">10 : 30 AM</p>
+                    <p class="message__name">Management Meeting</p>
+                    <p class="message__email">ghamon@hotmail.com</p>
+                    <p class="message__time">3 : 30 PM</p>
                 </div>
             </div>
             <div class="message__body">
                 <div class="message__status">
-                    <p class="message__going">9 Members Going</p>
-                    <p class="message__pending">2 Pending</p>
+                    <p class="message__going">6 Members Going</p>
+                    <p class="message__pending">4 Pending</p>
                 </div>
                 <div class="message__images">
-                    <img class="message__members-going" src="test__image.png">
-                    <img class="message__members-going" src="test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
+                    <img class="message__members-going" src="img/test__image.png">
                     <p class="message__details">+5 more</p>
                 </div>
             </div>
@@ -124,22 +132,24 @@
             <div class="message">
                 <div class="message__header">
                     <div class="message__picture">
-                        <img class="message__profile" src="test__image.png">
+                        <img class="message__profile" src="img/man4.jpg">
                     </div>
                     <div class="message__description">
-                        <p class="message__name">Design catchup</p>
-                        <p class="message__email">adellac@josianne.com</p>
-                        <p class="message__time">10 : 30 AM</p>
+                        <p class="message__name">Testing Vol. 1</p>
+                        <p class="message__email">amde@egament.com</p>
+                        <p class="message__time">2 : 30 PM</p>
                     </div>
                 </div>
                 <div class="message__body">
                     <div class="message__status">
-                        <p class="message__going">9 Members Going</p>
+                        <p class="message__going">7 Members Going</p>
                         <p class="message__pending">2 Pending</p>
                     </div>
                     <div class="message__images">
-                        <img class="message__members-going" src="test__image.png">
-                        <img class="message__members-going" src="test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
                         <p class="message__details">+5 more</p>
                     </div>
                 </div>
@@ -151,23 +161,25 @@
             <div class="message">
                 <div class="message__header">
                     <div class="message__picture">
-                        <img class="message__profile" src="test__image.png">
+                        <img class="message__profile" src="img/woman.jpg">
                     </div>
                     <div class="message__description">
-                        <p class="message__name">Design catchup</p>
-                        <p class="message__email">adellac@josianne.com</p>
-                        <p class="message__time">10 : 30 AM</p>
+                        <p class="message__name">Invasion Collabration</p>
+                        <p class="message__email">cadu@egament.com</p>
+                        <p class="message__time">5 : 30 PM</p>
                     </div>
                 </div>
                 <div class="message__body">
                     <div class="message__status">
-                        <p class="message__going">9 Members Going</p>
-                        <p class="message__pending">2 Pending</p>
+                        <p class="message__going">2 Members Going</p>
+                        <p class="message__pending">8 Pending</p>
                     </div>
                     <div class="message__images">
-                        <img class="message__members-going" src="test__image.png">
-                        <img class="message__members-going" src="test__image.png">
-                        <p class="message__details">+5 more</p>
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <p class="message__details">+6 more</p>
                     </div>
                 </div>
                 <div class="message__footer">
@@ -179,23 +191,25 @@
             <div class="message">
                 <div class="message__header">
                     <div class="message__picture">
-                        <img class="message__profile" src="test__image.png">
+                        <img class="message__profile" src="img/man5.jpg">
                     </div>
                     <div class="message__description">
-                        <p class="message__name">Design catchup</p>
-                        <p class="message__email">adellac@josianne.com</p>
-                        <p class="message__time">10 : 30 AM</p>
+                        <p class="message__name">Tech talk</p>
+                        <p class="message__email">luni@egament.com</p>
+                        <p class="message__time">6 : 00 PM</p>
                     </div>
                 </div>
                 <div class="message__body">
                     <div class="message__status">
                         <p class="message__going">9 Members Going</p>
-                        <p class="message__pending">2 Pending</p>
+                        <p class="message__pending">8 Pending</p>
                     </div>
                     <div class="message__images">
-                        <img class="message__members-going" src="test__image.png">
-                        <img class="message__members-going" src="test__image.png">
-                        <p class="message__details">+5 more</p>
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <p class="message__details">+13 more</p>
                     </div>
                 </div>
                 <div class="message__footer">
@@ -207,23 +221,25 @@
             <div class="message">
                 <div class="message__header">
                     <div class="message__picture">
-                        <img class="message__profile" src="test__image.png">
+                        <img class="message__profile" src="img/woman2.jpg">
                     </div>
                     <div class="message__description">
-                        <p class="message__name">Design catchup</p>
-                        <p class="message__email">adellac@josianne.com</p>
+                        <p class="message__name">IT Meeting</p>
+                        <p class="message__email">info@it.com</p>
                         <p class="message__time">10 : 30 AM</p>
                     </div>
                 </div>
                 <div class="message__body">
                     <div class="message__status">
-                        <p class="message__going">9 Members Going</p>
-                        <p class="message__pending">2 Pending</p>
+                        <p class="message__going">2 Members Going</p>
+                        <p class="message__pending">3 Pending</p>
                     </div>
                     <div class="message__images">
-                        <img class="message__members-going" src="test__image.png">
-                        <img class="message__members-going" src="test__image.png">
-                        <p class="message__details">+5 more</p>
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <img class="message__members-going" src="img/test__image.png">
+                        <p class="message__details">+2 more</p>
                     </div>
                 </div>
                 <div class="message__footer">
