CHeckboxes and a little edit on the fontsize

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="message">
                     <p class="notification_time">9:59</p>
-                    <span class="message_pf"></span>
+                    <img class="message_pf" src="">
                     <p class="notification_text">Mike added you in the meeting</p>
                     <label class="switch">
                         <input type="checkbox">
@@ -37,22 +37,26 @@
                     <p class="notification_time">12:45</p>
                     <p class="notification_text">Team voting for outing</p>
                     <ul>
-                        <li><label>
-                            <input type="checkbox">
-                        </label>Dinner</li>
-                        <li><label>
-                            <input type="checkbox">
-                        </label>Movie - Spiderman</li>
-                        <li><label>
-                            <input type="checkbox">
+                        <li><label class="container_checkbox">Dinner
+                            <input type="checkbox" class="checkbox">
+                            <span class="checkmark"></span>
                         </label></li>
-                        <li><label>
-                            <input type="checkbox">
+                        <li><label class="container_checkbox">Movie - Spiderman
+                            <input type="checkbox" class="checkbox">
+                            <span class="checkmark"></span>
+                        </label></li>
+                        <li><label class="container_checkbox">Football Tournament
+                            <input type="checkbox" class="checkbox">
+                            <span class="checkmark"></span>
+                        </label></li>
+                        <li><label class="container_checkbox">Mountain trip
+                            <input type="checkbox" class="checkbox">
+                            <span class="checkmark"></span>
                         </label></li>
                     </ul>
                 </div>
-                <div class="notification_buttons"><button class="refresh">Refresh</button><button class="close">close</button></div>
-
+                <div class="notification_buttons"><button class="refresh">Refresh</button><button class="close">Close</button></div>
+                <div class="inbox"></div>
             </section>
 
 
