made some changes in map structure

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
+            </div>
+            <div class="message__amount">
                 <p class="message__details">+5 more</p>
             </div>
+
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -66,7 +69,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -96,7 +99,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -126,7 +129,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -155,7 +158,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -184,7 +187,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -214,7 +217,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 
@@ -244,7 +247,7 @@
             </div>
         </div>
         <div class="message__footer">
-            <a href="#">View Details</a></p>
+            <a href="#">View Details</a>
         </div>
     </div>
 </div>
