last version rico

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+5 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+5 more</p>
+                </div>
+
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -83,6 +86,9 @@
                 <p class="message__name">Daily Meeting</p>
                 <p class="message__email">johnson.eva@santos.ca</p>
                 <p class="message__time">12 : 00 AM</p>
+                <div class="message__dot">
+                    <p>&#8226; &#8226; &#8226;</p>
+                </div>
             </div>
         </div>
         <div class="message__body">
@@ -95,8 +101,11 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+6 more</p>
-            </div>
+                </div>
+                <div class="message__amount">
+                    <p class="message__details">+6 more</p>
+                </div>
+
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -125,8 +134,10 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+5 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+5 more</p>
+                </div>
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -154,8 +165,10 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+5 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+5 more</p>
+                </div>
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -183,8 +196,10 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+6 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+6 more</p>
+                </div>
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -213,8 +228,10 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+13 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+13 more</p>
+                </div>
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -243,8 +260,10 @@
                 <img class="message__members-going" src="img/member2.jpg">
                 <img class="message__members-going" src="img/member3.jpg">
                 <img class="message__members-going" src="img/member4.jpg">
-                <p class="message__details">+2 more</p>
             </div>
+                <div class="message__amount">
+                    <p class="message__details">+2 more</p>
+                </div>
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
