--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="message">
                     <p class="notification_time">9:59</p>
-                    <img class="message_pf" src="">
+                    <img class="message_pf" src="img/profile.png">
                     <p class="notification_text">Mike added you in the meeting</p>
                     <label class="switch">
                         <input type="checkbox">
@@ -32,11 +32,12 @@
                 <div class="message">
                     <p class="notification_time">10:30</p>
                     <p class="notification_text">Sales Presentation with<br> Miguel - Daily catchup</p>
+                    <p class="message_joining"></p>
                 </div>
-                <div class="message">
+                <div class="message--large">
                     <p class="notification_time">12:45</p>
                     <p class="notification_text">Team voting for outing</p>
-                    <ul>
+                    <ul class="notification_list">
                         <li><label class="container_checkbox">Dinner
                             <input type="checkbox" class="checkbox">
                             <span class="checkmark"></span>
@@ -55,8 +56,17 @@
                         </label></li>
                     </ul>
                 </div>
-                <div class="notification_buttons"><button class="refresh">Refresh</button><button class="close">Close</button></div>
-                <div class="inbox"></div>
+                <div class="notification_buttons">
+                    <button class="refresh">Refresh</button>
+                    <button class="close">Close</button>
+                </div>
+                <div class="inbox">
+                    <img class="notification_bell" src="img/bell.svg">
+                    <div class="inbox_text">
+                    <p class="inbox-title">Inbox</p>
+                    <p class="today">03 September</p>
+                    </div>
+                </div>
             </section>
 
 
