--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <h3 class="message__title">Today - 8 meeting</h3>
-<!-- Flex messages container -->
+
 <div class="message__container">
-    <!-- Flex grid -->
+
     <div class="message">
         <div class="message__header">
             <div class="message__picture">
@@ -37,7 +37,6 @@
             <div class="message__amount">
                 <p class="message__details">+5 more</p>
             </div>
-
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
@@ -69,13 +68,11 @@
                 <div class="message__amount">
                     <p class="message__details">+5 more</p>
                 </div>
-
         </div>
         <div class="message__footer">
             <a href="#">View Details</a>
         </div>
     </div>
-
 
     <div class="message">
         <div class="message__header">
@@ -111,7 +108,6 @@
             <a href="#">View Details</a>
         </div>
     </div>
-
 
     <div class="message">
         <div class="message__header">
@@ -206,7 +202,6 @@
         </div>
     </div>
 
-
     <div class="message">
         <div class="message__header">
             <div class="message__picture">
@@ -237,7 +232,6 @@
             <a href="#">View Details</a>
         </div>
     </div>
-
 
     <div class="message">
         <div class="message__header">
