this is the final product

--- a/index.html
+++ b/index.html
@@ -405,17 +405,19 @@
 					</div>
 					<div class="notification">
 						<p class="notification_time">9:59</p>
-						<img class="notification_pf" src="img/profile.png">
+						<div class="pp_container">
+							<img class="notification_pp" src="img/woman.jpg">
+						</div>
 						<p class="notification_text">Mike added you in the meeting</p>
 						<label class="switch">
 							<input type="checkbox">
-							<span class="slider round"></span>
+							<span class="slider round"></span><p class="slider_text"> Going</p>
 						</label>
 					</div>
 					<div class="notification">
 						<p class="notification_time">10:30</p>
 						<p class="notification_text">Sales Presentation with<br> Miguel - Daily catchup</p>
-						<p class="message_joining"></p>
+						<p class="message_joining">20 peoples joining</p>
 					</div>
 					<div class="notification--large">
 						<p class="notification_time">12:45</p>
