--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 						<p class="notification_text">Catchup with simon</p>
 					</div>
 					<div class="notification">
-						<p class="notification_time">9:59</p>
+						<p class="notification_time"><img class="dot" src="img/circle.svg">9:59</p>
 						<div class="pp_container">
 							<img class="notification_pp" src="img/woman.jpg">
 						</div>
@@ -415,7 +415,7 @@
 						</label>
 					</div>
 					<div class="notification">
-						<p class="notification_time">10:30</p>
+						<p class="notification_time"><img class="dot" src="img/circle.svg">10:30</p>
 						<p class="notification_text">Sales Presentation with<br> Miguel - Daily catchup</p>
 						<p class="message_joining">20 peoples joining</p>
 					</div>
