--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 							<p class="grid-nav--title">Reservation</p>
 						</div>
 					</div>
-					<div class="grid-nav">
-						<div class="grid-nav--icon">
+					<div id="grid-target" class="grid-nav">
+						<div id="grid-target--icon" class="grid-nav--icon">
 							<div class="nav__icon">
 								<i class="far fa-credit-card"></i>
 							</div>
